<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/plogin_actionbar"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/lpurple">
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_below="@+id/plogin_actionbar"
    tools:context="com.meleeChat.MainActivity"
    android:background="@color/lpurple">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/username"
        android:hint="@string/tag"
        android:textColorHint="@color/silver"
        android:backgroundTint="@color/silver"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:textColor="@color/silver" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/tournamentName"
        android:hint="@string/tournamentName"
        android:textColorHint="@color/silver"
        android:backgroundTint="@color/silver"
        android:textColor="@color/silver"
        android:layout_below="@+id/username"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/tournamentName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/player_prompt"
        android:id="@+id/textView3"
        android:textColor="@color/silver"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getTournaments"
        android:id="@+id/tournamentButton"
        android:onClick="getTournaments"
        android:layout_below="@+id/tournamentName"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tournamentList"
        android:layout_below="@+id/tournamentButton"
        android:layout_alignRight="@+id/start_chat"
        android:layout_above="@id/start_chat"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/start_chat"
        android:onClick="playerLogin"
        android:enabled="true"
        android:text="@string/login"
        android:background="@color/green"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="35dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
</android.support.v7.widget.Toolbar>