<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/chat"
    android:background="@color/lpurple">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alertPlayers"
            android:id="@+id/alert"
            android:onClick="alertPlayersButton"
            android:layout_weight=".1"
            android:background="@color/yellow"
            android:layout_marginBottom="10dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reportTO"
            android:id="@+id/button2"
            android:onClick="reportResultsButton"
            android:layout_weight=".1"
            android:background="@color/red"
            android:layout_marginBottom="10dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/display"
            android:id="@+id/button3"
            android:onClick="displayInfoButton"
            android:layout_weight=".1"
            android:background="@color/green"
            android:layout_marginBottom="10dp" />

    </LinearLayout>
</RelativeLayout>